# db2rest-sdk-py

./: .gitignore  LICENSE  README.md  __init__.py  client.py  pyproject.toml  setup.cfg
api/: rdbms.py
models/: responses.py
src/db2rest/: client.py  exceptions.py
src/db2rest/api/: __init__.py  mongo.py
src/db2rest/models/: __init__.py
tests/: test_DB2RESTClient.py  test_RDBMSApi_find_all.py
